tests/ui/reachable/expr_type.stderr
error: unreachable expression
  --> $DIR/expr_type.rs:9:13
   |
LL |     let x = type_ascribe!({return}, !);
   |             ^^^^^^^^^^^^^^^------^^^^^
   |             |              |
   |             |              any code following this expression is unreachable
   |             unreachable expression
   |
note: the lint level is defined here
  --> $DIR/expr_type.rs:4:9
   |
LL | #![deny(unreachable_code)]
   |         ^^^^^^^^^^^^^^^^
   = note: this error originates in the macro `type_ascribe` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 1 previous error

